<resources>
    <string name="app_name">玩JM安卓</string>

    <string name="login_title">登录</string>
    <string name="login_user_name">用户名</string>
    <string name="login_user_pwd">密码</string>
    <string name="login_btn_txt">登录</string>
    <string name="login_user_name_tips">请输入用户名</string>
    <string name="login_user_pwd_tips">请输入密码</string>
    <string name="login_user_pwd_confirm_tips">请再次输入密码</string>
    <string name="login_user_pwd_confirm_not_same_tips">两次密码输入不一致</string>
    <string name="logout_tips">是否要退出登录？</string>
    <string name="logout_dialog_title">提示</string>
    <string name="progress_bar_loading_tip">正在加载…</string>

    <string name="register_title">注册</string>

    <string name="btm_nav_home">首页</string>
    <string name="btm_nav_square">广场</string>
    <string name="btm_nav_project">项目</string>
    <string name="btm_nav_gzh">公众号</string>

    <string name="no_data">暂无数据</string>
    <string name="search_hint">请输入关键字</string>
    <string name="search_record">最近搜索</string>
    <string name="search_hot_key">搜索热词</string>

    <string name="login_account_hint">用户名</string>
    <string name="login_pwd_hint">输入密码</string>
    <string name="login_register">注册账号</string>
    <string name="register_pwd_hint">密码</string>
    <string name="register_pwd_confirm_hint">确认密码</string>
    <string name="register_and_login">注册并登陆</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_setting">设置</string>

    <string name="setting_title">设置</string>
    <string name="setting_clean_cache">清理缓存</string>
    <string name="setting_clean_cache_desc">清除缓存的图片、数据等内容</string>
    <string name="setting_clean_cache_tips">确定要清除缓存吗？</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_night_mode_tips">开启/关闭深色夜间模式</string>
</resources>
