<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="settingViewModel"
            type="com.dwyaneq.playandroidkotlin.module.setting.SettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg_color"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar" />

        <RelativeLayout
            android:id="@+id/rl_clean_cache"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/common_item_bg_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/setting_clean_cache"
                android:textColor="@color/common_txt333_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/setting_clean_cache_desc"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="@={settingViewModel.cacheSize}"
                android:textColor="@color/common_txt999_color"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/common_divider_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/common_item_bg_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/setting_night_mode"
                android:textColor="@color/common_txt333_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/setting_night_mode_tips"
                android:textSize="13sp" />

            <Switch
                android:id="@+id/switch_night_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/common_divider_color" />

    </LinearLayout>
</layout>