<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="loginViewModel"
            type="com.dwyaneq.playandroidkotlin.module.login.LoginViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_item_bg_color"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:src="@mipmap/ic_launcher_round" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/login_edit_bg_shape"
                android:hint="@string/login_account_hint"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@={loginViewModel.username}"
                android:textColor="@color/common_txt333_color"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/login_edit_bg_shape"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@={loginViewModel.userpwd}"
                android:textColor="@color/common_txt333_color"
                android:textSize="17sp" />

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/login_btn_bg_selector"
                android:onClick="@{loginViewModel::onSubmitClick}" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:text="@string/login_register"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>
</layout>
