<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="registerViewModel"
            type="com.dwyaneq.playandroidkotlin.module.login.LoginViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_item_bg_color"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <include layout="@layout/common_toolbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/login_edit_bg_shape"
                android:hint="@string/login_account_hint"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@={registerViewModel.username}"
                android:textColor="@color/common_txt333_color"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/login_edit_bg_shape"
                android:hint="@string/register_pwd_hint"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@={registerViewModel.userpwd}"
                android:textColor="@color/common_txt333_color"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/login_edit_bg_shape"
                android:hint="@string/register_pwd_hint"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@={registerViewModel.userpwd}"
                android:textColor="@color/common_txt333_color"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="55dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/register_btn_bg_selector"
                android:gravity="center"
                android:onClick="@{registerViewModel::onRegisterClick}"
                android:text="@string/register_and_login"
                android:textColor="@color/common_white_txt_color"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</layout>
